# basics

gl-basic/: CMakeLists.txt  README.md  main.cpp
matplotlib/: README.md  main.py
next-i18n/: README.md  next-i18next.config.js  next.config.mjs  package-lock.json  package.json
next-i18n/pages/: index.tsx
next-i18n/public/locales/en/: common.json
next-i18n/public/locales/ko/: common.json
next-sentry/: README.md  next.config.mjs  package-lock.json  package.json  sentry.client.config.ts  sentry.edge.config.ts  sentry.server.config.ts
next-sentry/pages/: sentry-example-page.jsx
scripts/: emscripten.sh
wasm-zlib/: compile.sh
wasm-zlib/cpp/: main.cpp
wasm-zlib/front/: package-lock.json
wasm-zlib/front/pages/: index.tsx
wasm-zlib/front/public/: main.js  main.wasm
